# everything-app

./: .gitignore  CLAUDE.md  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
docs/: everything-app-implementation-plan.md  everything-app-prd.md  widget-development-guide.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: audio.rs  crypto.rs  dashboard.rs  mod.rs  transcription.rs  widget.rs
src-tauri/src/db/: migrations.rs  mod.rs
src/components/shell/: AppSettingsDialog.tsx  AudioTest.tsx  CommandPalette.tsx  DashboardDialog.tsx  GridArea.tsx  LazyWidget.tsx  ShellLayout.tsx  Sidebar.tsx  TopBar.tsx  WidgetCard.tsx  WidgetCatalog.tsx  WidgetErrorBoundary.tsx  WidgetGrid.tsx  WidgetSettingsDialog.tsx
src/lib/store/: dashboard-store.ts  layout-store.ts  shared-state.ts  shortcuts-store.ts  theme-store.ts
src/lib/widget-sdk/: context.ts  event-bus.ts  notifications.ts  registry.ts  settings-cache.ts  types.ts
src/widgets/counter-reader/: CounterReaderCompact.tsx  config.ts  manifest.json
src/widgets/counter-writer/: CounterWriterCompact.tsx  config.ts  manifest.json
src/widgets/craving-control/: BreathingExercise.tsx  CravingCompact.tsx  CravingExpanded.tsx  config.ts  manifest.json  types.ts
src/widgets/crypto-prices/: CryptoPricesCompact.tsx  CryptoPricesExpanded.tsx  config.ts  manifest.json  types.ts  use-hyperliquid-ws.ts
src/widgets/daily-tasks/: DailyTasksCompact.tsx  config.ts  (+4 more)
(+19 files in other folders)
