[package]
name = "everythingapp"
version = "0.1.0"
description = "Everything App — Personal productivity and wellbeing dashboard"
authors = ["Giovanni"]
edition = "2021"

[lib]
name = "everythingapp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-notification = "2"
tauri-plugin-fs = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

